Enable API Login end point
