# app/controllers/api/v1/account_controller.rb
@@ -6,9 +6,13 @@ module Api
 	  ENV["CRYPTO_KEY"]
 	)  
         
-        begin 
+        begin
+	  data = {}
+	  data.merge!(username: params[:username]) if params[:username]
+	  data.merge!(email: params[:email]) if params[:email]
+	  data.merge!(password: params[:password]) if params[:password]
 	  manager = AccountManager.new(
-	    params[:data], 
+	    data, 
 	    encryption_provider
 	  )
 	  manager_response = manager.register
@@ -27,6 +31,28 @@ module Api
 
 	render json: response, status: status 
 
+      end
+
+      def login
+	encryption_provider = ActiveSupport::MessageEncryptor.new(
+	  ENV["CRYPTO_KEY"]
+	)  
+	data = {}
+	data.merge!(username: params[:username]) if params[:username]
+        data.merge!(password: params[:password]) if params[:password]
+	
+	begin
+          jwt_service = JWTService.new(ENV["CRYPTO_KEY"])
+          login = Login.new(data, encryption_provider, jwt_service)
+	  jwt = login.get_jwt
+	  response = { jwt: jwt }
+	  status = :ok
+        rescue LoginError => e
+	  response = { message: e.message } 
+	  status = :unprocessable_entity
+	end		
+        
+	render json: response, status: status 
       end
     end
   end
